Removed some no longer used styles, added some default letter spacing

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,6 +37,7 @@ html {
   font-size: var(--default-font-size);
   font-weight: var(--weight-normal);
   line-height: 1.5;
+  letter-spacing: -0.44px;
 }
 
 body {
